# quark

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  input.q  main.q  output.py  pyproject.toml  source.q  source2.q  target.py  test.q
src/: command.rs  compiler.rs  lib.rs  main.rs
src/cli/: command.rs  error.rs  mod.rs
src/compiler/: compiler.rs  error.rs  generator.rs  lexer.rs  mod.rs  parser.rs
src/compiler/lexer/: error.rs  lex.rs  lexer.rs  mod.rs
src/compiler/parser/: declaration.rs  error.rs  mod.rs  parse.rs  parser.rs  utils.rs
src/compiler/semanter/: analyse.rs  mod.rs  semanter.rs  table.rs  type.rs
src/compiler/synthesiser/: mod.rs  synthesis.rs  synthesiser.rs
src/generator/: mod.rs
src/interface/: command.rs  interface.rs  mod.rs
src/language/: language.rs  mod.rs  symbol.rs
src/language/grammar/: controlflow.rs  declaration.rs  expression.rs  functions.rs  identifier_head.rs  items.rs  mod.rs  programme.rs  statement.rs
src/language/lexicon/: mod.rs  symbol.rs  token.rs
src/language/semantics/: type.rs
src/language/token/: kind.rs  mod.rs  token.rs
src/language/utils/: mod.rs  position.rs  span.rs  symbol.rs
src/lexer/: mod.rs
src/lexer/token/: identifier.rs  literal.rs  mod.rs  operator.rs  separator.rs
src/parser/: expression.rs  grammar.rs  mod.rs  util.rs  utils.rs
src/parser/declaration/: mod.rs  statement.rs  utils.rs
src/parser/statement/: mod.rs  utils.rs
tests/: function_and_loops.rs  lexer.rs  parser.rs
tests/parser/: matrix.rs  mod.rs
tests/parser/declarations/: mod.rs
(+61 files in other folders)
